crates/ui-macros/tests/compile-fail/programmatic_no_angle.rs
use poly_ui_macros::connected;

#[connected(programmatic)]
fn SomeRoute() {}
